--- a/TAMMVIPERAssignment/Base.lproj/Main.storyboard
+++ b/TAMMVIPERAssignment/Base.lproj/Main.storyboard
@@ -57,6 +57,93 @@
             </objects>
             <point key="canvasLocation" x="901.52671755725191" y="-40.140845070422536"/>
         </scene>
+        <!--University Detail View Controller-->
+        <scene sceneID="S1E-P9-VTW">
+            <objects>
+                <viewController storyboardIdentifier="UniversityDetailViewController" id="SrX-HR-Dxu" customClass="UniversityDetailViewController" customModule="TAMMVIPERAssignment" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WMa-vN-w5M">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vPF-09-CB6">
+                                <rect key="frame" x="16" y="75" width="361" height="119.33333333333331"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R94-dS-bqO">
+                                        <rect key="frame" x="16" y="16" width="329" height="87.333333333333329"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="OHf-AO-98N">
+                                                <rect key="frame" x="0.0" y="0.0" width="329" height="87.333333333333329"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAY-F0-gFf">
+                                                        <rect key="frame" x="0.0" y="0.0" width="329" height="26.333333333333332"/>
+                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XCr-go-cnz">
+                                                        <rect key="frame" x="0.0" y="26.333333333333329" width="329" height="20.333333333333329"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="MPY-po-Bni">
+                                                        <rect key="frame" x="0.0" y="46.666666666666657" width="329" height="20.333333333333329"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhW-ED-01T">
+                                                                <rect key="frame" x="0.0" y="0.0" width="41.333333333333336" height="20.333333333333332"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GPU-XO-VUL">
+                                                                <rect key="frame" x="287.66666666666669" y="0.0" width="41.333333333333314" height="20.333333333333332"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                    </stackView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bKn-7V-fod">
+                                                        <rect key="frame" x="0.0" y="67" width="329" height="20.333333333333329"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="R94-dS-bqO" secondAttribute="bottom" constant="16" id="EPF-Xm-kAo"/>
+                                    <constraint firstItem="R94-dS-bqO" firstAttribute="leading" secondItem="vPF-09-CB6" secondAttribute="leading" constant="16" id="Fxk-oe-Dd8"/>
+                                    <constraint firstItem="R94-dS-bqO" firstAttribute="top" secondItem="vPF-09-CB6" secondAttribute="top" constant="16" id="WjY-ue-HmI"/>
+                                    <constraint firstAttribute="trailing" secondItem="R94-dS-bqO" secondAttribute="trailing" constant="16" id="frZ-M1-eJX"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="d6O-Mo-WwK"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vPF-09-CB6" firstAttribute="top" secondItem="d6O-Mo-WwK" secondAttribute="top" constant="16" id="4xM-pR-hzt"/>
+                            <constraint firstItem="d6O-Mo-WwK" firstAttribute="trailing" secondItem="vPF-09-CB6" secondAttribute="trailing" constant="16" id="ZCs-sS-5PN"/>
+                            <constraint firstItem="vPF-09-CB6" firstAttribute="leading" secondItem="d6O-Mo-WwK" secondAttribute="leading" constant="16" id="x0U-mW-PjW"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="mainView" destination="vPF-09-CB6" id="DdH-kA-ft8"/>
+                        <outlet property="universityCountryCodeLabel" destination="GPU-XO-VUL" id="G76-HC-mLQ"/>
+                        <outlet property="universityCountryLabel" destination="zhW-ED-01T" id="6Rn-fO-8Vz"/>
+                        <outlet property="universityNameLabel" destination="cAY-F0-gFf" id="GgF-TV-WzV"/>
+                        <outlet property="universityStateLabel" destination="XCr-go-cnz" id="dLE-dQ-6rL"/>
+                        <outlet property="universityWebPageLabel" destination="bKn-7V-fod" id="Dct-XA-U0l"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sqK-bG-3aZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1650" y="-30"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
